--- a/src/app/pages/radio-button-form/form.module.scss
+++ b/src/app/pages/radio-button-form/form.module.scss
@@ -7,8 +7,12 @@
   }
 
   .FormCard {
-    width: 450px;
+    width: 800px;
     border-radius: 12px;
     box-shadow: 0px 1px 4px 0px #000000 15%;
+
+    .GroupContainer {
+      margin-bottom: 36px;
+    }
   }
 }
